--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.0.1",
+    "version": "1.0.0-rc",
     "license": "MIT",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
@@ -7,6 +7,11 @@
         "dist",
         "src"
     ],
+    "repository": {
+        "url": "https://github.com/Klerith/do-product-card",
+        "type": "git"
+    },
+    "homepage": "https://fernando-herrera.com",
     "engines": {
         "node": ">=10"
     },
@@ -14,6 +19,7 @@
         "start": "tsdx watch",
         "build": "tsdx build",
         "test": "tsdx test --passWithNoTests",
+        "test:watch": "tsdx test --watch",
         "lint": "tsdx lint",
         "prepare": "tsdx build",
         "size": "size-limit",
@@ -33,36 +39,53 @@
         "singleQuote": true,
         "trailingComma": "es5"
     },
-    "name": "bm-product-card",
-    "author": "Brian Emmanuel Magario",
-    "module": "dist/bm-product-card.esm.js",
+    "name": "do-product-card",
+    "author": "Fernando Herrera",
+    "module": "dist/do-product-card.esm.js",
     "size-limit": [{
-            "path": "dist/bm-product-card.cjs.production.min.js",
+            "path": "dist/do-product-card.cjs.production.min.js",
             "limit": "10 KB"
         },
         {
-            "path": "dist/bm-product-card.esm.js",
+            "path": "dist/do-product-card.esm.js",
             "limit": "10 KB"
         }
     ],
     "devDependencies": {
+        "@types/react-test-renderer": "^17.0.1",
+        "@babel/preset-env": "^7.15.6",
+        "@babel/preset-react": "^7.14.5",
         "@rollup/plugin-image": "^2.1.1",
-        "@size-limit/preset-small-lib": "^7.0.8",
-        "@types/react": "^18.0.9",
-        "@types/react-dom": "^18.0.3",
-        "autoprefixer": "^10.4.7",
-        "husky": "^8.0.1",
-        "postcss-cli": "^9.1.0",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "rollup-plugin-postcss": "^4.0.2",
-        "size-limit": "^7.0.8",
+        "@size-limit/preset-small-lib": "^5.0.5",
+        "@types/react": "^17.0.26",
+        "@types/react-dom": "^17.0.9",
+        "babel-jest": "^27.2.4",
+        "husky": "^7.0.2",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^27.2.4",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-test-renderer": "^17.0.2",
+        "rollup-plugin-postcss": "^4.0.1",
+        "size-limit": "^5.0.5",
         "tsdx": "^0.14.1",
-        "tslib": "^2.4.0",
-        "typescript": "^4.6.4",
-        "react-scripts": "^4.0.1"
+        "tslib": "^2.3.1",
+        "typescript": "^4.4.3"
     },
+    "keywords": [
+        "product",
+        "card",
+        "brian",
+        "magario",
+        "argentina"
+    ],
     "dependencies": {
-        "postcss": "8.1.0"
+
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+            "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+        }
     }
 }
